Put in a placeholder image with the right size to avoid page jumping. (#10)

--- a/contents/css/_section-intro.css
+++ b/contents/css/_section-intro.css
@@ -25,6 +25,10 @@
   }
 }
 
+.section-intro-lottie #intro-heart {
+  visibility: hidden;
+}
+
 .section-intro-background {
   @media (--medium) {
     position: relative;
